www/versioned_docs/version-8.6.0/API/namespaces/constants.md
---
id: 'constants'
title: 'Namespace: constants'
sidebar_label: 'constants'
sidebar_position: 0
custom_edit_url: null
---

Utils

## Type Aliases

### BaseUrl

Ƭ **BaseUrl**: `ValuesType`\<typeof [`BaseUrl`](constants.md#baseurl-1)\>

#### Defined in

[src/global/constants.ts:67](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L67)

[src/global/constants.ts:71](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L71)

---

### NetworkName

Ƭ **NetworkName**: `ValuesType`\<typeof [`NetworkName`](constants.md#networkname-1)\>

#### Defined in

[src/global/constants.ts:74](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L74)

[src/global/constants.ts:78](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L78)

---

### StarknetChainId

Ƭ **StarknetChainId**: `ValuesType`\<typeof [`StarknetChainId`](constants.md#starknetchainid-1)\>

#### Defined in

[src/global/constants.ts:81](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L81)

[src/global/constants.ts:85](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L85)

---

### TransactionHashPrefix

Ƭ **TransactionHashPrefix**: `ValuesType`\<typeof [`TransactionHashPrefix`](constants.md#transactionhashprefix-1)\>

#### Defined in

[src/global/constants.ts:88](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L88)

[src/global/constants.ts:95](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L95)

---

### SupportedRpcVersion

Ƭ **SupportedRpcVersion**: `ValuesType`\<typeof [`SupportedRpcVersion`](constants.md#supportedrpcversion-1)\>

#### Defined in

[src/global/constants.ts:101](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L101)

[src/global/constants.ts:107](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L107)

---

### SupportedTransactionVersion

Ƭ **SupportedTransactionVersion**: typeof [`V3`](RPC.RPCSPEC09.API.md#v3)

#### Defined in

[src/global/constants.ts:110](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L110)

---

### SupportedCairoVersion

Ƭ **SupportedCairoVersion**: `"1"`

#### Defined in

[src/global/constants.ts:111](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L111)

## Variables

### IS_BROWSER

• `Const` **IS_BROWSER**: `boolean`

#### Defined in

[src/utils/encode.ts:3](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/encode.ts#L3)

---

### TEXT_TO_FELT_MAX_LEN

• `Const` **TEXT_TO_FELT_MAX_LEN**: `31`

Cairo Felt support storing max 31 character

#### Defined in

[src/global/constants.ts:13](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L13)

---

### ZERO

• `Const` **ZERO**: `0n`

#### Defined in

[src/global/constants.ts:14](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L14)

---

### MASK_250

• `Const` **MASK_250**: `bigint`

#### Defined in

[src/global/constants.ts:15](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L15)

---

### MASK_31

• `Const` **MASK_31**: `bigint`

#### Defined in

[src/global/constants.ts:16](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L16)

---

### API_VERSION

• `Const` **API_VERSION**: `0n`

#### Defined in

[src/global/constants.ts:17](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L17)

---

### PRIME

• `Const` **PRIME**: `bigint`

#### Defined in

[src/global/constants.ts:18](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L18)

---

### MAX_STORAGE_ITEM_SIZE

• `Const` **MAX_STORAGE_ITEM_SIZE**: `256n`

#### Defined in

[src/global/constants.ts:21](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L21)

---

### ADDR_BOUND

• `Const` **ADDR_BOUND**: `bigint`

#### Defined in

[src/global/constants.ts:22](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L22)

---

### RANGE_FELT

• `Const` **RANGE_FELT**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:26](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L26)

---

### RANGE_U8

• `Const` **RANGE_U8**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:29](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L29)

---

### RANGE_U16

• `Const` **RANGE_U16**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:30](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L30)

---

### RANGE_U32

• `Const` **RANGE_U32**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:31](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L31)

---

### RANGE_U64

• `Const` **RANGE_U64**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:32](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L32)

---

### RANGE_U96

• `Const` **RANGE_U96**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:33](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L33)

---

### RANGE_U128

• `Const` **RANGE_U128**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:34](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L34)

---

### RANGE_I8

• `Const` **RANGE_I8**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:37](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L37)

---

### RANGE_I16

• `Const` **RANGE_I16**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:38](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L38)

---

### RANGE_I32

• `Const` **RANGE_I32**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:39](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L39)

---

### RANGE_I64

• `Const` **RANGE_I64**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:40](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L40)

---

### RANGE_I128

• `Const` **RANGE_I128**: `Object`

#### Type declaration

| Name  | Type     |
| :---- | :------- |
| `min` | `bigint` |
| `max` | `bigint` |

#### Defined in

[src/global/constants.ts:41](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L41)

---

### LegacyUDC

• `Const` **LegacyUDC**: `Object`

#### Type declaration

| Name         | Type                                                                   |
| :----------- | :--------------------------------------------------------------------- |
| `ADDRESS`    | `"0x041a78e741e5af2fec34b695679bc6891742439f7afb8484ecd7766661ad02bf"` |
| `ENTRYPOINT` | `"deployContract"`                                                     |

#### Defined in

[src/global/constants.ts:43](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L43)

---

### UDC

• `Const` **UDC**: `Object`

#### Type declaration

| Name         | Type                                                                   |
| :----------- | :--------------------------------------------------------------------- |
| `ADDRESS`    | `"0x02ceed65a4bd731034c01113685c831b01c15d7d432f71afb1cf1634b53a2125"` |
| `ENTRYPOINT` | `"deploy_contract"`                                                    |

#### Defined in

[src/global/constants.ts:48](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L48)

---

### OutsideExecutionCallerAny

• `Const` **OutsideExecutionCallerAny**: `"0x414e595f43414c4c4552"`

#### Defined in

[src/global/constants.ts:53](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L53)

---

### SNIP9_V1_INTERFACE_ID

• `Const` **SNIP9_V1_INTERFACE_ID**: `"0x68cfd18b92d1907b8ba3cc324900277f5a3622099431ea85dd8089255e4181"`

#### Defined in

[src/global/constants.ts:54](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L54)

---

### SNIP9_V2_INTERFACE_ID

• `Const` **SNIP9_V2_INTERFACE_ID**: `"0x1d1144bb2138366ff28d8e9ab57456b1d332ac42196230c3a602003c89872"`

#### Defined in

[src/global/constants.ts:56](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L56)

---

### HARDENING_BYTE

• `Const` **HARDENING_BYTE**: `128`

#### Defined in

[src/global/constants.ts:61](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L61)

---

### HARDENING_4BYTES

• `Const` **HARDENING_4BYTES**: `2147483648n`

#### Defined in

[src/global/constants.ts:63](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L63)

---

### BaseUrl

• `Const` **BaseUrl**: `Object`

#### Type declaration

| Name         | Type                                  |
| :----------- | :------------------------------------ |
| `SN_MAIN`    | `"https://alpha-mainnet.starknet.io"` |
| `SN_SEPOLIA` | `"https://alpha-sepolia.starknet.io"` |

#### Defined in

[src/global/constants.ts:67](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L67)

[src/global/constants.ts:71](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L71)

---

### NetworkName

• `Const` **NetworkName**: `Object`

#### Type declaration

| Name         | Type           |
| :----------- | :------------- |
| `SN_MAIN`    | `"SN_MAIN"`    |
| `SN_SEPOLIA` | `"SN_SEPOLIA"` |

#### Defined in

[src/global/constants.ts:74](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L74)

[src/global/constants.ts:78](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L78)

---

### StarknetChainId

• `Const` **StarknetChainId**: `Object`

#### Type declaration

| Name         | Type                       |
| :----------- | :------------------------- |
| `SN_MAIN`    | `"0x534e5f4d41494e"`       |
| `SN_SEPOLIA` | `"0x534e5f5345504f4c4941"` |

#### Defined in

[src/global/constants.ts:81](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L81)

[src/global/constants.ts:85](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L85)

---

### TransactionHashPrefix

• `Const` **TransactionHashPrefix**: `Object`

#### Type declaration

| Name             | Type                               |
| :--------------- | :--------------------------------- |
| `DECLARE`        | `"0x6465636c617265"`               |
| `DEPLOY`         | `"0x6465706c6f79"`                 |
| `DEPLOY_ACCOUNT` | `"0x6465706c6f795f6163636f756e74"` |
| `INVOKE`         | `"0x696e766f6b65"`                 |
| `L1_HANDLER`     | `"0x6c315f68616e646c6572"`         |

#### Defined in

[src/global/constants.ts:88](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L88)

[src/global/constants.ts:95](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L95)

---

### SupportedRpcVersion

• `Const` **SupportedRpcVersion**: `Object`

dot format rpc versions

#### Type declaration

| Name     | Type      |
| :------- | :-------- |
| `0.8.1`  | `"0.8.1"` |
| `0.9.0`  | `"0.9.0"` |
| `v0_8_1` | `"0.8.1"` |
| `v0_9_0` | `"0.9.0"` |

#### Defined in

[src/global/constants.ts:101](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L101)

[src/global/constants.ts:107](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L107)

---

### DEFAULT_GLOBAL_CONFIG

• `Const` **DEFAULT_GLOBAL_CONFIG**: `Object`

#### Type declaration

| Name                     | Type                                                                      | Description                                                                                                                                                                           |
| :----------------------- | :------------------------------------------------------------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `logLevel`               | [`LogLevel`](../modules.md#loglevel)                                      | -                                                                                                                                                                                     |
| `rpcVersion`             | [`SupportedRpcVersion`](constants.md#supportedrpcversion)                 | -                                                                                                                                                                                     |
| `transactionVersion`     | [`SupportedTransactionVersion`](constants.md#supportedtransactionversion) | -                                                                                                                                                                                     |
| `resourceBoundsOverhead` | [`ResourceBoundsOverhead`](../modules.md#resourceboundsoverhead)          | -                                                                                                                                                                                     |
| `defaultTipType`         | [`TipType`](../modules.md#tiptype)                                        | -                                                                                                                                                                                     |
| `fetch`                  | `any`                                                                     | -                                                                                                                                                                                     |
| `websocket`              | `any`                                                                     | -                                                                                                                                                                                     |
| `buffer`                 | `any`                                                                     | -                                                                                                                                                                                     |
| `blake`                  | (`uint8Array`: `Uint8Array`) => `Uint8Array` \| `undefined`               | Custom blake function **`Param`** The uint8Array to hash **`Example`** `typescript config.set('blake', (uint8Array: Uint8Array) => { return blake2s(uint8Array, { dkLen: 32 }); }); ` |

#### Defined in

[src/global/constants.ts:114](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L114)

---

### RPC_DEFAULT_NODES

• `Const` **RPC_DEFAULT_NODES**: `Object`

#### Type declaration

| Name         | Type                                                              |
| :----------- | :---------------------------------------------------------------- |
| `SN_MAIN`    | readonly [``"https://starknet-mainnet.public.blastapi.io/rpc/"``] |
| `SN_SEPOLIA` | readonly [``"https://starknet-sepolia.public.blastapi.io/rpc/"``] |

#### Defined in

[src/global/constants.ts:160](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L160)

---

### PAYMASTER_RPC_NODES

• `Const` **PAYMASTER_RPC_NODES**: `Object`

#### Type declaration

| Name         | Type                                                |
| :----------- | :-------------------------------------------------- |
| `SN_MAIN`    | readonly [``"https://starknet.paymaster.avnu.fi"``] |
| `SN_SEPOLIA` | readonly [``"https://sepolia.paymaster.avnu.fi"``]  |

#### Defined in

[src/global/constants.ts:165](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L165)

---

### SYSTEM_MESSAGES

• `Const` **SYSTEM_MESSAGES**: `Object`

#### Type declaration

| Name                             | Type     |
| :------------------------------- | :------- |
| `legacyTxWarningMessage`         | `string` |
| `legacyTxRPC08Message`           | `string` |
| `SWOldV3`                        | `string` |
| `channelVersionMismatch`         | `string` |
| `unsupportedSpecVersion`         | `string` |
| `maxFeeInV3`                     | `string` |
| `declareNonSierra`               | `string` |
| `unsupportedMethodForRpcVersion` | `string` |
| `txEvictedFromMempool`           | `string` |
| `consensusFailed`                | `string` |
| `txFailsBlockBuildingValidation` | `string` |

#### Defined in

[src/global/constants.ts:171](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/global/constants.ts#L171)
